Fix text highlight margins Fix number input on firefox Zoom and pan on location select on map

--- a/src/modules/texthighlight/texthighlight.scss
+++ b/src/modules/texthighlight/texthighlight.scss
@@ -1,5 +1,6 @@
 .mdl-texthighlight {
-  @include sizeCurve('padding', smallerRegular);
+  @include sizeCurve(padding, smallerRegular);
+  @include sizeCurve(margin-top margin-bottom, medium);
 
   *:last-child {
     margin-bottom: 0;
